# warnings

./: Cargo.toml
examples/: generic_lint.rs  lint.rs  test.rs
src/: lib.rs  warnings.rs
warnings-macro/: Cargo.toml
warnings-macro/src/: allow.rs  lib.rs
