[package]
name = "warnings-macro"
version = "0.2.0"
edition = "2021"
authors = ["Evan Almloff <evanalmloff@gmail.com>"]
description = "A macro for defining warnings"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dioxuslabs/warnings"
homepage = "https://dioxuslabs.com" 

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0" }
quote = "1.0.36"
syn = { version = "2.0.71", features = ["full", "visit", "visit-mut"] }
